--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "max-len": 0,
     "react/jsx-no-bind": 0,
     "react/prefer-stateless-function": 0,
-    "jsx-quotes": [2, "prefer-single"]
+    "jsx-quotes": [2, "prefer-single"],
+    "semi": 0,
   }
 }
