--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "clean": "rm -rf build && mkdir build",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "node-testdebug": "node debug --harmony ./node_modules/jest-cli/bin/jest.js --runInBand",
+    "devtool-testdebug": "./node_modules/devtool/bin/index.js ./node_modules/.bin/jest -i --no-cache --config=./server/tests/jest.debug.json server/tests"
   },
   "pre-commit": "lint",
   "repository": {
@@ -37,20 +39,22 @@
   "author": "Jon Stokes",
   "homepage": "https://github.com/collectiveidea/maxclicky",
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
     "babel-register": "https://registry.npmjs.org/babel-register/-/babel-register-6.11.6.tgz",
+    "devtool": "^2.3.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "^6.8.0",
+    "hjs-webpack": "^8.3.0",
+    "jest": "^17.0.3",
+    "jest-environment-node-debug": "^2.0.0",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.3.3",
-    "@kadira/storybook": "^2.21.0",
-    "hjs-webpack": "^8.3.0",
-    "jest": "^17.0.3"
+    "redbox-react": "^1.3.3"
   },
   "dependencies": {
     "autoprefixer": "^6.6.1",
