--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "A full-stack relay boilerplate.",
   "scripts": {
-    "start": "nodemon --watch 'server/data/**/*.js' --exec 'npm run update && babel-node server/index.js'",
-    "update": "./node_modules/.bin/babel-node server/utils/updateSchema.js",
+    "start": "nodemon --watch 'server/data/**/*.js' --exec 'yarn run update && babel-node server/index.js'",
+    "update": "./node_modules/.bin/babel-node server/lib/updateSchema.js",
     "deploy": "npm run clean && cross-env NODE_ENV=production webpack --config webpack.config.js && npm run update && npm run build-server && cross-env NODE_ENV=production node ./build/index.js",
     "build-server": "cross-env NODE_ENV=production ./node_modules/.bin/babel ./server --out-dir ./build",
     "lint": "eslint --ignore-path .gitignore client server",
     "heroku-postbuild": "cross-env NODE_ENV=production webpack --config webpack.config.js && cross-env NODE_ENV=production ./node_modules/.bin/babel ./server --out-dir ./lib",
     "clean": "rm -rf build && mkdir build",
-    "test": "jest",
+    "test": "./node_modules/.bin/jest --config=./server/tests/jest.json",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "node-testdebug": "node debug --harmony ./node_modules/jest-cli/bin/jest.js --runInBand",
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/collectiveidea/maxclicky",
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
+    "babel-plugin-module-resolver": "^2.5.0",
     "devtool": "^2.3.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
