--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "multer": "^1.2.0",
     "node-sass": "^3.8.0",
     "normalize.css": "^5.0.0",
+    "passport": "^0.3.2",
     "postcss-loader": "^1.2.1",
     "precss": "^1.4.0",
     "react": "^15.4.1",
