--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
+    "express-session": "^1.15.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.6.3",
@@ -86,8 +87,10 @@
     "lodash": "^4.17.4",
     "multer": "^1.2.0",
     "node-sass": "^3.8.0",
+    "node-uuid": "^1.4.7",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "postcss-loader": "^1.2.1",
     "precss": "^1.4.0",
     "react": "^15.4.1",
