--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "pre-commit": "^1.2.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.3.3"
+    "redbox-react": "^1.3.3",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "autoprefixer": "^6.6.1",
