--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "babel-relay-plugin": "^0.10.0",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
+    "connect-flash": "^0.1.1",
     "connect-history-api-fallback": "^1.3.0",
     "cookie-session": "^2.0.0-alpha.1",
     "cross-env": "^3.1.4",
