--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "html-webpack-plugin": "^2.26.0",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.4",
+    "morgan": "^1.8.1",
     "multer": "^1.2.0",
     "node-sass": "^3.8.0",
     "node-uuid": "^1.4.7",
